--- a/package.json
+++ b/package.json
@@ -19,22 +19,23 @@
     "@designsystemsinternational/static": "^3.3.10",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^3.8.1",
-    "gatsby-plugin-image": "^1.8.0",
-    "gatsby-plugin-mdx": "^2.8.0",
-    "gatsby-plugin-postcss": "^4.8.0",
-    "gatsby-plugin-react-helmet": "^4.8.0",
-    "gatsby-plugin-sharp": "^3.8.0",
-    "gatsby-source-filesystem": "^3.8.0",
-    "gatsby-transformer-sharp": "^3.8.0",
-    "postcss": "^8.3.5",
+    "gatsby": "^3.10.2",
+    "gatsby-plugin-image": "^1.10.1",
+    "gatsby-plugin-mdx": "^2.10.1",
+    "gatsby-plugin-postcss": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
+    "postcss": "^8.3.6",
     "postcss-calc": "^8.0.0",
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-properties": "^11.0.0",
     "postcss-nesting": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sanitize.css": "^12.0.1"
   },
   "static": {
     "profile": "runemadsen",
