--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "dev": "gatsby develop",
+    "dev": "gatsby develop -H 0.0.0.0",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -19,6 +19,7 @@
     "@designsystemsinternational/static": "^3.3.10",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "classnames": "^2.3.1",
     "gatsby": "^3.10.2",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-mdx": "^2.10.1",
